client/src/styles/overlays/ui/weapon_controls.styl
#weapon_controls {
    display: none;
    bottom: 8px;
    right: 180px;
    z-index: 2;

    div.label {
        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
        font-size: 0.7rem;
    }

    button {
        width: 150px;
        height: 150px;
        background: radial-gradient(rgba(218, 225, 230, 0.15) 5%, rgba(218, 225, 230, 0.35) 95%),
                    url("/assets/images/touchpad/attack.svg") center center no-repeat;
        // border: 2px solid rgba(218, 225, 230, 0.25);
        border-radius: 90px;
        box-shadow: 0px 0px 5px rgba(194, 200, 204, 0.55);
    }

    /* The switch - the box around the slider */
    .switch {
        margin-top: 0.35rem;
        position: relative;
        display: inline-block;
        width: 60px;
        height: 34px;
    }

    /* Hide default HTML checkbox */
    .switch input {
        opacity: 0;
        width: 0;
        height: 0;
    }

    /* The slider */
    .slider {
        position: absolute;
        cursor: pointer;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background: linear-gradient(rgba(218, 225, 230, 0.05) 5%, rgba(218, 225, 230, 0.15) 95%);
        -webkit-transition: .4s;
        transition: .4s;
    }

    .slider:before {
        position: absolute;
        content: "";
        height: 26px;
        width: 26px;
        left: 4px;
        bottom: 4px;
        background-color: rgba(255,255,255, 0.35);
        -webkit-transition: .4s;
        transition: .4s;
    }

    input:checked + .slider {
        background: linear-gradient(rgba(255, 160, 51, 0.7) 5%, rgba(255, 160, 51, 0.35) 95%);
    }

    input:focus + .slider {
        box-shadow: 0 0 1px rgb(255, 160, 51);
    }

    input:checked + .slider:before {
        -webkit-transform: translateX(26px);
        -ms-transform: translateX(26px);
        transform: translateX(26px);
        background: linear-gradient(rgba(255, 160, 51, 0.7) 95%, rgba(255, 160, 51, 0.35) 5%);
    }

    /* Rounded sliders */
    .slider.round {
        border-radius: 34px;
    }

    .slider.round:before {
        border-radius: 50%;
    }
}

